Fix slider items spacing

--- a/css/posts-custom.css
+++ b/css/posts-custom.css
@@ -7,6 +7,7 @@ Secondary Theme Colors: #FFF, #bb9b70;
 @media(max-width:575px){ .posts-custom>h2{font-size:30px;} }
 .posts-custom .posts-list{list-style-type:none;}
 .posts-custom .post-item{display:flex; flex-direction:column; align-items:flex-start; margin-bottom:20px;}
+div[class*="posts-custom-slider"] .post-item{margin:5px 5px 20px;}
 .posts-custom .post-list-item{display:flex; align-items:center;padding:5px;margin-bottom: 10px;
 background-color:rgba(71,201,229,.05); border-radius:3px;}
 .posts-custom .post-list-item>*{margin-left:5px; margin-right:5px;}
